--- a/app/src/main/res/drawable/ic_coupons.xml
+++ b/app/src/main/res/drawable/ic_coupons.xml
@@ -5,5 +5,5 @@
         android:viewportHeight="24.0">
     <path
         android:fillColor="@color/colorIconsOrTexts"
-        android:pathData="M14.08,15.59L16.67,13H7V11H16.67L14.08,8.41L15.5,7L20.5,12L15.5,17L14.08,15.59M19,3A2,2 0,0 1,21 5V9.67L19,7.67V5H5V19H19V16.33L21,14.33V19A2,2 0,0 1,19 21H5C3.89,21 3,20.1 3,19V5C3,3.89 3.89,3 5,3H19Z"/>
+        android:pathData="M3,5v6h5L7,7l4,1L11,3L5,3c-1.1,0 -2,0.9 -2,2zM8,13L3,13v6c0,1.1 0.9,2 2,2h6v-5l-4,1 1,-4zM17,17l-4,-1v5h6c1.1,0 2,-0.9 2,-2v-6h-5l1,4zM19,3h-6v5l4,-1 -1,4h5L21,5c0,-1.1 -0.9,-2 -2,-2z"/>
 </vector>
