--- a/app/src/main/res/layout/fragment_coupons_item.xml
+++ b/app/src/main/res/layout/fragment_coupons_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,6 +15,10 @@
         android:layout_height="140dp"
         card_view:cardCornerRadius="10dp">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -22,6 +26,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/couponPicture"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:src="@drawable/ic_cupcake" />
@@ -35,6 +40,14 @@
                 android:textSize="@dimen/text_size_large"
                 android:textStyle="bold" />
         </LinearLayout>
-
+            <ImageView
+                android:id="@+id/apiStatus"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center"
+                android:src="@drawable/uber_api"
+                android:layout_margin="8dp"/>
+        </FrameLayout>
     </android.support.v7.widget.CardView>
-</LinearLayout>
+
+</RelativeLayout>
