--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,6 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/emailHint"
+                    android:maxLines="1"
                     android:paddingBottom="15dp"
                     android:textColor="@color/white"
                     android:textColorHint="@color/fade_white" />
@@ -93,6 +94,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/passwordHint"
+                    android:maxLines="1"
                     android:inputType="textPassword"
                     android:paddingBottom="15dp"
                     android:textColor="@color/white"
