--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -45,6 +45,8 @@
                         android:textColor="@android:color/white"
                         android:layout_width="match_parent"
                         android:textAlignment="center"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
                         android:layout_centerInParent="true"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -72,6 +74,7 @@
                         android:layout_marginEnd="20dp"
                         android:padding="20dp"
                         android:textSize="15dp"
+                        android:maxLines="1"
                         android:textColor="@color/colorBackground"
                         android:hint="Ask your question here"
                         android:background="@drawable/box_bottom_line"
