--- a/app/src/main/res/layout/fragment_coupons_item.xml
+++ b/app/src/main/res/layout/fragment_coupons_item.xml
@@ -40,12 +40,16 @@
                 android:textSize="@dimen/text_size_large"
                 android:textStyle="bold" />
         </LinearLayout>
+
+            <!--This is the gdg-stamp-->
+
             <ImageView
                 android:id="@+id/apiStatus"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_gravity="center"
-                android:src="@drawable/uber_api"
+                android:src="@drawable/gdgstamp"
+                android:visibility="gone"
                 android:layout_margin="8dp"/>
         </FrameLayout>
     </android.support.v7.widget.CardView>
