--- a/app/src/main/res/layout/fragment_coupons_item.xml
+++ b/app/src/main/res/layout/fragment_coupons_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -40,14 +41,16 @@
                 android:textSize="@dimen/text_size_large"
                 android:textStyle="bold" />
         </LinearLayout>
-            <ImageView
-                android:id="@+id/apiStatus"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_gravity="center"
-                android:src="@drawable/uber_api"
-                android:layout_margin="8dp"/>
+
         </FrameLayout>
+        <ImageView
+            android:id="@+id/apiStatus"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/gdgstamp"
+            android:layout_margin="8dp"/>
     </android.support.v7.widget.CardView>
+
 
 </RelativeLayout>
