--- a/app/src/main/res/layout/fragment_about_group_item.xml
+++ b/app/src/main/res/layout/fragment_about_group_item.xml
@@ -5,13 +5,14 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="?attr/selectableItemBackground"
     android:orientation="vertical">
 
     <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/photo"
