--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -78,7 +78,7 @@
                         android:textColor="@color/colorBackground"
                         android:hint="Ask your question here"
                         android:background="@drawable/box_bottom_line"
-                        android:textColorHint="@color/colorBackground"
+                        android:textColorHint="@color/textColorSecondary"
                         android:textAlignment="center"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
