Fixed sync of Timeline phases and made them selectable

--- a/app/src/main/res/layout/fragment_timeline_recycler_item.xml
+++ b/app/src/main/res/layout/fragment_timeline_recycler_item.xml
@@ -9,7 +9,8 @@
     android:layout_marginBottom="20dp"
     card_view:cardBackgroundColor="@color/white"
     card_view:cardCornerRadius="5dp"
-    card_view:cardElevation="5dp">
+    card_view:cardElevation="5dp"
+    android:id="@+id/holder">
 
 
     <TextView
