--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -3,10 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     android:id="@+id/root"
     android:orientation="vertical"
     android:weightSum="10">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"
+        android:orientation="vertical"
+        android:weightSum="7"
+        android:background="@color/colorPrimary">
 
     <LinearLayout
         android:id="@+id/banner"
@@ -73,8 +80,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6"
-        android:background="@color/colorPrimary">
+        android:layout_weight="6">
 
         <com.gdgvitvellore.devfest.Entity.Customs.VerticalViewPager
             android:id="@+id/pager"
@@ -108,13 +114,13 @@
         </LinearLayout>
 
     </FrameLayout>
+    </LinearLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
-        android:background="@color/material_dark">
+        android:layout_weight="3">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/phases_list"
